--- a/css/styles.css
+++ b/css/styles.css
@@ -514,16 +514,18 @@ overflow: hidden;
     background: rgba(46, 47, 66, 0.4);
     z-index: 999;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 50%;
+    left: 50%;
+    width: 408px;
+    margin-bottom: 8px;
     height: 100%;
     display: flex;
+    padding: 72px 24px 24px 24px;
     justify-content: center;
     align-items: center;
     /* opacity: 0;
     pointer-events: none;  */
-    transition: opacity 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .modal-overlay.is-open {
@@ -539,7 +541,10 @@ overflow: hidden;
     min-height: 584px;
     min-width: 408px;
     overflow-y: auto;
+    margin-bottom: 16px;
     position: absolute;
+    transform: translate(-50%, -50%);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
@@ -569,8 +574,9 @@ label {
 
 .name-label {
     font-weight: 400;
+    display: block;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
     margin-bottom: 4px;
@@ -583,6 +589,8 @@ label {
     height: 40px;
     padding-left: 38px;
     outline: transparent;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus {
@@ -596,9 +604,10 @@ label {
 .icon-label {
     position: absolute;
     top: 50%;
-    left: 19px;
+    left: 16px;
     fill: #2e2f42;
     transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:focus+.icon-label {
@@ -615,27 +624,47 @@ label {
 .close-btn-form {
     position: absolute;
     padding: 0;
-    border: 0;
+    display: flex;
+    border-radius: 50%;
     line-height: 0;
     right: 24px;
+    align-items: center;
+    justify-content: center;
     top: 24px;
     width: 24px;
     height: 24px;
     border-radius: 100%;
-    fill: #e7e9fc;
+    background-color: #e7e9fc;
     stroke-width: 1px;
-    stroke: rgba(0, 0, 0, 0.1);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .close-btn-icon {
-    fill: #2e2f42; 
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-textarea {
     resize: none;
     width: 360px;
     height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding: 8px 16px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.form-textarea:focus {
+    border-color: #4D5AE5;
 }
 
 .form-textarea::placeholder {
@@ -655,6 +684,7 @@ label {
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    fill: transparent;
     background-color: transparent;
     margin-right: 8px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -728,6 +758,16 @@ label {
     background-color: transparent;
     border: none;
     outline: none;
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    color: #ffffff;
 }
 
 .input-footer::placeholder {
@@ -735,13 +775,13 @@ label {
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    color: #fff;
+    color: #ffffff;
 }
 
 .btn-sub-footer {
     border-radius: 4px;
     padding: 8px 24px;
-    max-width: 165px;
+    min-width: 165px;
     height: 40px;
     background-color: #4d5ae5;
     display: flex;
@@ -753,6 +793,7 @@ label {
     text-align: center;
     color: #fff;
     justify-content: center;
+    cursor: pointer;
     flex-direction: row;
     gap: 16px;
     position: absolute;
@@ -769,8 +810,17 @@ label {
 
 .icon-footer-sub {
     fill: #fff;
+    margin-left: 16px
 }
 
 .sub-div {
     margin-left: 80px;
+}
+
+.footer-form {
+    gap: 24px;
+}
+
+.modal-form-checkbox {
+    margin-bottom: 24px;
 }
