--- a/css/styles.css
+++ b/css/styles.css
@@ -550,7 +550,7 @@ img {
     border-radius: 4px;
     min-height: 584px;
     max-width: 408px;
-    padding: 0 24px 0 24px;
+    padding: 72px 24px 24px 24px;
     top: 50%;
     left: 50%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -581,7 +581,6 @@ img {
 }
 
 label {
-    display: flex;
     flex-direction: column;
     margin-bottom: 4px;
 }
@@ -729,7 +728,6 @@ label {
     font-weight: 400;
     color: #8e8f99;
     align-items: center;
-    display: flex;
 }
 
 .privacy-policy {
@@ -762,6 +760,11 @@ label {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-btn:hover, .form-btn:focus {
+    background-color: #404BBF;
+    border: none;
+}
+
 .text-sub-footer {
     font-weight: 500;
     font-size: 16px;
@@ -769,16 +772,6 @@ label {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
-}
-
-.footer-form {
-    border: 1px solid #fff;
-    border-radius: 4px;
-    width: 264px;
-    height: 40px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    padding: 8px 0 8px 16px;
-    position: relative;
 }
 
 .input-footer {
@@ -814,38 +807,32 @@ label {
 }
 
 .btn-sub-footer {
-    border-radius: 4px;
-    padding: 8px 24px;
-    min-width: 165px;
-    height: 40px;
-    background-color: #4d5ae5;
     display: flex;
     align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 16px;
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border: none;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
     color: #fff;
-    justify-content: center;
-    cursor: pointer;
-    flex-direction: row;
-    gap: 16px;
-    position: absolute;
-    margin-left: auto;
-    top: 0;
-    left: 100%;
-    margin-left: 24px;
+}
+
+.btn-sub-footer:hover, .btn-sub-footer:focus {
     border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #404BBF;
 }
 
 .icon-footer-sub {
     fill: #fff;
-    margin-left: 16px
 }
 
 .sub-div {
@@ -853,7 +840,8 @@ label {
 }
 
 .footer-form {
-    gap: 24px;
+    display: flex;
+    gap: 24px
 }
 
 .modal-form-checkbox {
